--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "clsx": "^2.0.0",
     "lucide-react": "^0.284.0",
     "next": "latest",
+    "novel": "^0.1.22",
     "react": "latest",
     "react-dom": "latest",
     "tailwind-merge": "^1.14.0",
