--- a/package.json
+++ b/package.json
@@ -10,9 +10,12 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^4.25.1",
+    "@radix-ui/react-dialog": "^1.0.5",
+    "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-slot": "^1.0.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
+    "formik": "^2.4.5",
     "framer-motion": "^10.16.4",
     "lucide-react": "^0.284.0",
     "next": "latest",
