--- a/package.json
+++ b/package.json
@@ -4,15 +4,17 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build": "npx prisma generate && next build",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
     "@clerk/nextjs": "^4.25.1",
+    "@prisma/client": "5.4.1",
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-slot": "^1.0.2",
+    "axios": "^1.5.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "formik": "^2.4.5",
@@ -22,18 +24,23 @@
     "novel": "^0.1.22",
     "react": "latest",
     "react-dom": "latest",
+    "react-dropzone": "^14.2.3",
+    "sonner": "^1.0.3",
     "tailwind-merge": "^1.14.0",
+    "zod": "^3.22.4",
+    "zod-formik-adapter": "^1.2.0",
     "zustand": "^4.4.2"
   },
   "devDependencies": {
-    "typescript": "latest",
-    "@types/react": "latest",
     "@types/node": "latest",
+    "@types/react": "latest",
     "@types/react-dom": "latest",
     "autoprefixer": "latest",
-    "postcss": "latest",
-    "tailwindcss": "latest",
     "eslint": "latest",
-    "eslint-config-next": "latest"
+    "eslint-config-next": "latest",
+    "postcss": "latest",
+    "prisma": "^5.4.1",
+    "tailwindcss": "latest",
+    "typescript": "latest"
   }
 }
