--- a/package.json
+++ b/package.json
@@ -23,8 +23,10 @@
     "next": "latest",
     "novel": "^0.1.22",
     "react": "latest",
+    "react-confetti": "^6.1.0",
     "react-dom": "latest",
     "react-dropzone": "^14.2.3",
+    "short-uuid": "^4.2.2",
     "sonner": "^1.0.3",
     "tailwind-merge": "^1.14.0",
     "zod": "^3.22.4",
