--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-slot": "^1.0.2",
+    "@tanstack/react-query": "^4.35.7",
+    "@tanstack/react-query-devtools": "^4.35.7",
     "axios": "^1.5.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
@@ -26,6 +28,7 @@
     "react-confetti": "^6.1.0",
     "react-dom": "latest",
     "react-dropzone": "^14.2.3",
+    "react-query": "^3.39.3",
     "short-uuid": "^4.2.2",
     "sonner": "^1.0.3",
     "tailwind-merge": "^1.14.0",
